syntax = "proto3";

option csharp_namespace = "TestTask.protos.Items";

service ItemService{
	rpc GetItemsByFilter (ItemCategoryFilter) returns (ItemListResponse);
	rpc GetItemsById (ItemFilterById) returns (Item);
}

message ItemFilterById{
    int32 Id = 1;
}

message ItemCategoryFilter{
    string CategoryNameFilter = 1;
    repeated AttributeFilter AttributeFilters = 2;
}

message AttributeFilter
{
    string AttributeName = 1;
    string AttributeValue = 2;
}

message ItemListResponse{
    repeated Item Items = 1;
}

message Item{
    int32 Id = 1;
    string ItemName = 2;
    string Description = 3;
    double Price = 4;
    Category Category = 5;
}

message Category{
    int32 Id = 1;
    string CategoryName = 2;
    repeated CategoryAttribute Attributes = 3;
}

message CategoryAttribute{
    int32 Id = 1;
    string AttributeName = 2;
    string Value = 3;
    int32 DataType = 4;
}
